--- a/scripts/known_good.json
+++ b/scripts/known_good.json
@@ -2,11 +2,11 @@
     "repos": [
         {
             "name": "glslang",
-            "url": "https://github.com/archimedus/glslang.git",
+            "url": "https://github.com/KhronosGroup/glslang.git",
             "sub_dir": "glslang",
             "build_dir": "glslang/build",
             "install_dir": "glslang/build/install",
-            "commit": "a7260ca8a6a81cddacef5d6b3d80398cd67b94b5",
+            "commit": "4f3ae4b03dc3556f96f55467e139f852831199d0",
             "optional": [
                 "tests"
             ]
