build: Disable unstable thread sanitizer tests

--- a/.github/workflows/vvl.yml
+++ b/.github/workflows/vvl.yml
@@ -39,7 +39,7 @@ jobs:
       matrix:
         os: [ubuntu-22.04]
         compiler: [{cc: gcc, cxx: g++}]
-        flags: [{c: "-fsanitize=address", ld: "-fsanitize=address"}, {c: "-fsanitize=thread", ld: "-fsanitize=thread"}]
+        flags: [{c: "-fsanitize=address", ld: "-fsanitize=address"}]
         config: [debug, release]
         cpp_std: [17]
         robin_hood: ["ON"]
