--- a/scripts/known_good.json
+++ b/scripts/known_good.json
@@ -31,7 +31,7 @@
                 "-DVULKANSC=ON",
                 "-DGEN_VULKANSC_COMBINED=ON"
             ],
-            "commit": "e8febd2664a72d0e4d029585822ea3fa127f916e"
+            "commit": "vksc1.0.13"
         },
         {
             "name": "SPIRV-Headers",
