build: Update CI issue branch policy

--- a/.github/workflows/vvl_sc.yml
+++ b/.github/workflows/vvl_sc.yml
@@ -26,9 +26,10 @@ concurrency:
 
 on:
     push:
+        branches:
+            - '!main'
     pull_request:
         branches:
-            - main
             - sc_main
 
 jobs:
