--- a/scripts/known_good.json
+++ b/scripts/known_good.json
@@ -20,7 +20,7 @@
                 "-DVULKANSC=ON",
                 "-DGEN_VULKANSC_COMBINED=ON"
             ],
-            "commit": "e98757b36fc2afb8c7b56803e4a31029695af947"
+            "commit": "vksc1.0.14"
         },
         {
             "name": "Vulkan-Utility-Libraries",
@@ -44,7 +44,7 @@
             "sub_dir": "Vulkan-Utility-Libraries",
             "build_dir": "Vulkan-Utility-Libraries/build",
             "install_dir": "Vulkan-Utility-Libraries/build/install",
-            "commit": "d7a0eede7b94c5e3b31336df4d132c68e5c3c530",
+            "commit": "vksc1.0.14",
             "cmake_options": [
                 "-DVULKANSC=ON"
             ],
@@ -159,7 +159,7 @@
                 "-DVULKANSC=ON",
                 "-DLOADER_USE_UNSAFE_FILE_SEARCH=ON"
             ],
-            "commit": "48de6966bea876cdb40842c99d1f03390ef1178d",
+            "commit": "vksc1.0.14",
             "build_step": "skip",
             "optional": [
                 "tests"
@@ -198,7 +198,7 @@
             "sub_dir": "Vulkan-Tools",
             "build_dir": "Vulkan-Tools/build",
             "install_dir": "Vulkan-Tools/build/install",
-            "commit": "09146abfd65d69c653298180dd1151fe0552ee5d",
+            "commit": "vksc1.0.14",
             "build_step": "skip",
             "optional": [
                 "tests"
