layers: Add SPIR-V validation support

--- a/layers/CMakeLists.txt
+++ b/layers/CMakeLists.txt
@@ -340,8 +340,10 @@ if(VULKANSC)
         vulkansc/core_checks/sc_core_validation.cpp
         vulkansc/core_checks/sc_core_validation.h
         vulkansc/core_checks/sc_removed_command_validation.cpp
+        vulkansc/core_checks/sc_spirv_validation.cpp
         vulkansc/state_tracker/sc_device_state.h
         vulkansc/state_tracker/sc_cmd_buffer_state.h
+        vulkansc/state_tracker/sc_pipeline_state.cpp
         vulkansc/state_tracker/sc_pipeline_state.h
         vulkansc/state_tracker/sc_state_tracker.cpp
         vulkansc/state_tracker/sc_state_tracker.h
