--- a/tests/vulkansc/CMakeLists.txt
+++ b/tests/vulkansc/CMakeLists.txt
@@ -1,5 +1,5 @@
 # ~~~
-# Copyright (c) 2023-2023 RasterGrid Kft.
+# Copyright (c) 2023-2024 RasterGrid Kft.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -30,10 +30,14 @@ target_sources(vksc_layer_validation_tests PRIVATE
     framework/vksc_test_dispatch_helper.cpp
     framework/vksc_test_pipeline_cache_helper.h
     framework/vksc_test_pipeline_cache_helper.cpp
+    framework/vksc_test_pipeline_helper.h
+    framework/vksc_test_pipeline_helper.cpp
     framework/vksc_layer_validation_tests.h
     framework/vksc_layer_validation_tests.cpp
+    framework/vksc_pipeline_templates.h
     framework/vksc_render_framework.h
     framework/vksc_render_framework.cpp
+    framework/vksc_shader_templates.h
     ../framework/layer_validation_tests.h
     ../framework/layer_validation_tests.cpp
     ../framework/test_common.h
@@ -76,15 +80,15 @@ target_sources(vksc_layer_validation_tests PRIVATE
     negative/pipeline.cpp
     negative/ported.cpp
     negative/render_pass.cpp
+    negative/shader_spirv.cpp
     negative/wsi.cpp
+    positive/device_create.cpp
     positive/implicit.cpp
     positive/instance.cpp
     positive/others.cpp
     positive/pipeline.cpp
+    positive/shader_spirv.cpp
 )
-
-# TODO: Remove once Android.mk is gone.
-target_compile_definitions(vksc_layer_validation_tests PRIVATE VVL_TESTS_USE_CMAKE)
 
 add_dependencies(vksc_layer_validation_tests vvl)
 target_include_directories(vksc_layer_validation_tests PRIVATE . ..)
