--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -153,6 +153,9 @@ if (MIMALLOC_INSTALL_DIR)
     list(APPEND CMAKE_PREFIX_PATH ${MIMALLOC_INSTALL_DIR})
     set(CMAKE_REQUIRE_FIND_PACKAGE_mimalloc TRUE PARENT_SCOPE)
 endif()
+if (JSONCPP_INSTALL_DIR)
+    list(APPEND CMAKE_PREFIX_PATH ${JSONCPP_INSTALL_DIR})
+endif()
 
 if (CMAKE_CROSSCOMPILING)
     set(CMAKE_FIND_ROOT_PATH ${CMAKE_FIND_ROOT_PATH} ${CMAKE_PREFIX_PATH} PARENT_SCOPE)
