--- a/scripts/known_good.json
+++ b/scripts/known_good.json
@@ -203,6 +203,23 @@
             "optional": [
                 "tests"
             ]
+        },
+        {
+            "name": "jsoncpp",
+            "api": "vulkansc",
+            "url": "https://github.com/open-source-parsers/jsoncpp.git",
+            "sub_dir": "jsoncpp",
+            "build_dir": "jsoncpp/build",
+            "install_dir": "jsoncpp/build/install",
+            "commit": "1.9.5",
+            "cmake_options": [
+                "-DCMAKE_POSITION_INDEPENDENT_CODE=ON",
+                "-DJSONCPP_WITH_TESTS=OFF",
+                "-DJSONCPP_WITH_POST_BUILD_UNITTEST=OFF",
+                "-DJSONCPP_WITH_WARNING_AS_ERROR=OFF",
+                "-DJSONCPP_WITH_PKGCONFIG_SUPPORT=OFF",
+                "-DJSONCPP_STATIC_WINDOWS_RUNTIME=OFF"
+            ]
         }
     ],
     "install_names": {
@@ -211,6 +228,7 @@
         "Vulkan-Utility-Libraries": "VULKAN_UTILITY_LIBRARIES_INSTALL_DIR",
         "SPIRV-Headers": "SPIRV_HEADERS_INSTALL_DIR",
         "SPIRV-Tools": "SPIRV_TOOLS_INSTALL_DIR",
+        "jsoncpp": "JSONCPP_INSTALL_DIR",
         "robin-hood-hashing": "ROBIN_HOOD_HASHING_INSTALL_DIR",
         "googletest": "GOOGLETEST_INSTALL_DIR",
         "mimalloc": "MIMALLOC_INSTALL_DIR"
