--- a/scripts/known_good.json
+++ b/scripts/known_good.json
@@ -212,6 +212,19 @@
                 "-DJSONCPP_WITH_PKGCONFIG_SUPPORT=OFF",
                 "-DJSONCPP_STATIC_WINDOWS_RUNTIME=OFF"
             ]
+        },
+        {
+            "name": "cppcodec",
+            "url": "https://github.com/tplgy/cppcodec.git",
+            "sub_dir": "cppcodec",
+            "build_dir": "cppcodec/build",
+            "install_dir": "cppcodec/build/install",
+            "commit": "8019b8b580f8573c33c50372baec7039dfe5a8ce",
+            "cmake_options": [
+                "-DCPPCODEC_BUILD_EXAMPLES=OFF",
+                "-DCPPCODEC_BUILD_TESTING=OFF",
+                "-DCPPCODEC_BUILD_TOOLS=OFF"
+            ]
         }
     ],
     "install_names": {
@@ -223,6 +236,7 @@
         "jsoncpp": "JSONCPP_INSTALL_DIR",
         "robin-hood-hashing": "ROBIN_HOOD_HASHING_INSTALL_DIR",
         "googletest": "GOOGLETEST_INSTALL_DIR",
-        "mimalloc": "MIMALLOC_INSTALL_DIR"
+        "mimalloc": "MIMALLOC_INSTALL_DIR",
+        "cppcodec": "CPPCODEC_INSTALL_DIR"
     }
 }
