build: Fix Ubuntu backcompat
cppcodec sets the "LINKER_LANGUAGE" target property, which isn't
allowed in CMake version 3.16 found in Ubuntu 20.04. We sidestep
installing this header-only dep by building it, since it doesn't
install anything which (truly) helps detecting it via CMake.

--- a/scripts/known_good.json
+++ b/scripts/known_good.json
@@ -220,10 +220,9 @@
             "build_dir": "cppcodec/build",
             "install_dir": "cppcodec/build/install",
             "commit": "8019b8b580f8573c33c50372baec7039dfe5a8ce",
-            "cmake_options": [
-                "-DCPPCODEC_BUILD_EXAMPLES=OFF",
-                "-DCPPCODEC_BUILD_TESTING=OFF",
-                "-DCPPCODEC_BUILD_TOOLS=OFF"
+            "build_step": "custom",
+            "custom_build": [
+                "cmake -E copy_directory cppcodec build/install/include/cppcodec"
             ]
         }
     ],
