build: Prepare for release 1.0.17

--- a/scripts/known_good.json
+++ b/scripts/known_good.json
@@ -19,7 +19,7 @@
             "cmake_options": [
                 "-DGEN_VULKANSC_COMBINED=ON"
             ],
-            "commit": "7cb5f69e731a90a4eb9330d02b786ef56ccd4fbd"
+            "commit": "vksc1.0.17"
         },
         {
             "name": "Vulkan-Utility-Libraries",
@@ -43,7 +43,7 @@
             "sub_dir": "Vulkan-Utility-Libraries",
             "build_dir": "Vulkan-Utility-Libraries/build",
             "install_dir": "Vulkan-Utility-Libraries/build/install",
-            "commit": "aa6e95c834219832ef73120a2ff23e735598628e",
+            "commit": "vksc1.0.17",
             "deps": [
                 {
                     "var_name": "VULKAN_HEADERS_INSTALL_DIR",
@@ -151,7 +151,7 @@
             "sub_dir": "Vulkan-Loader",
             "build_dir": "Vulkan-Loader/build",
             "install_dir": "Vulkan-Loader/build/install",
-            "commit": "85022170644e41cd7e083ee4c9afc871c6fc5f7c",
+            "commit": "vksc1.0.17",
             "build_step": "skip",
             "optional": [
                 "tests"
@@ -190,7 +190,7 @@
             "sub_dir": "Vulkan-Tools",
             "build_dir": "Vulkan-Tools/build",
             "install_dir": "Vulkan-Tools/build/install",
-            "commit": "78d049e5233e94ebd24b7ac0a9dab3df9123e4a6",
+            "commit": "vksc1.0.17",
             "build_step": "skip",
             "optional": [
                 "tests"
