build: Prepare for release 1.0.18

--- a/scripts/known_good.json
+++ b/scripts/known_good.json
@@ -19,7 +19,7 @@
             "cmake_options": [
                 "-DGEN_VULKANSC_COMBINED=ON"
             ],
-            "commit": "928fc35c007356f0a4546988fd155ab86f55b4e3"
+            "commit": "vksc1.0.18"
         },
         {
             "name": "Vulkan-Utility-Libraries",
@@ -43,7 +43,7 @@
             "sub_dir": "Vulkan-Utility-Libraries",
             "build_dir": "Vulkan-Utility-Libraries/build",
             "install_dir": "Vulkan-Utility-Libraries/build/install",
-            "commit": "a8f6e1e379d5e9c2999fdd9da0eade0c04a43812",
+            "commit": "vksc1.0.18",
             "deps": [
                 {
                     "var_name": "VULKAN_HEADERS_INSTALL_DIR",
@@ -151,7 +151,7 @@
             "sub_dir": "Vulkan-Loader",
             "build_dir": "Vulkan-Loader/build",
             "install_dir": "Vulkan-Loader/build/install",
-            "commit": "88a5463f052f4f0fa9fb42f097662ac70a91bdc7",
+            "commit": "vksc1.0.18",
             "build_step": "skip",
             "optional": [
                 "tests"
@@ -190,7 +190,7 @@
             "sub_dir": "Vulkan-Tools",
             "build_dir": "Vulkan-Tools/build",
             "install_dir": "Vulkan-Tools/build/install",
-            "commit": "00f696a5be7ec9ef02e8269b125756cc814c266b",
+            "commit": "vksc1.0.18",
             "build_step": "skip",
             "optional": [
                 "tests"
@@ -203,7 +203,7 @@
             "sub_dir": "jsoncpp",
             "build_dir": "jsoncpp/build",
             "install_dir": "jsoncpp/build/install",
-            "commit": "1.9.5",
+            "commit": "1.9.6",
             "cmake_options": [
                 "-DCMAKE_POSITION_INDEPENDENT_CODE=ON",
                 "-DJSONCPP_WITH_TESTS=OFF",
